--- a/mystyle.html
+++ b/mystyle.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="Assets/cgunning1.css" ></head>
 <body>
    <div id="h1">
-      <p><img src="Assets/re.jpg" width="200" height="50" alt=""/>My Style<img src="Assets/the.jpg" width="200" height="50" alt=""/></p>
+      <p><img src="./Assets/re.jpg" width="200" height="50" alt=""/>My Style<img src="./Assets/the.jpg" width="200" height="50" alt=""/></p>
    </div>
 <div id="p1">
   <p></p>
@@ -20,7 +20,7 @@
 
    <div id="p3">
      <p></p>
-     <p><img src="Assets/k.jpg" width="480" height="640" alt=""/></p>
+     <p><img src="./Assets/k.jpg" width="480" height="640" alt=""/></p>
      <p>&nbsp;</p>
    </div>
    <div id="footer">
