--- a/Art1.html
+++ b/Art1.html
@@ -9,7 +9,7 @@
 
 <body>
    <div id="h1">
-     <p> <img src="Assets/re.jpg" width="200" height="50" alt=""/>Art<img src="Assets/the.jpg" width="200" height="50" alt=""/></p>
+     <p> <img src="./Assets/re.jpg" width="200" height="50" alt=""/>Art<img src="./Assets/the.jpg" width="200" height="50" alt=""/></p>
    </div>
    <div id="p1">
      <p><a href="index.html">Home</a> - <a href="abouttheartist.html">About The Artist</a> - Art - <a href="mystyle.html">My Style</a></p>
@@ -22,25 +22,25 @@
      <table width="200" border="1" align="center" cellpadding="1" cellspacing="1">
         <tbody>
           <tr>
-            <td><a href="Assets/profile.jpg"><img src="Assets/c.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/3.jpg"><img src="Assets/h.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/8.jpg"><img src="Assets/l.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/17.jpg"><img src="Assets/m.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/23.jpg"><img src="Assets/q.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/profile.jpg"><img src="./Assets/c.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/3.jpg"><img src="./Assets/h.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/8.jpg"><img src="./Assets/l.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/17.jpg"><img src="./Assets/m.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/23.jpg"><img src="./Assets/q.jpg" width="200" height="200" alt=""/></a></td>
           </tr>
           <tr>
-            <td><a href="Assets/11.jpg"><img src="Assets/j.jpg" width="192" height="297" alt=""/></a></td>
-            <td><a href="Assets/1.jpg"><img src="Assets/p.jpg" width="200" height="259" alt=""/></a></td>
-            <td><a href="Assets/2.jpg"><img src="Assets/e.jpg" width="200" height="257" alt=""/></a></td>
-            <td><a href="Assets/4.jpg"><img src="Assets/n.jpg" width="200" height="250" alt=""/></a></td>
-            <td><a href="Assets/5.jpg"><img src="Assets/d.jpg" width="200" height="242" alt=""/></a></td>
+            <td><a href="Assets/11.jpg"><img src="./Assets/j.jpg" width="192" height="297" alt=""/></a></td>
+            <td><a href="Assets/1.jpg"><img src="./Assets/p.jpg" width="200" height="259" alt=""/></a></td>
+            <td><a href="Assets/2.jpg"><img src="./Assets/e.jpg" width="200" height="257" alt=""/></a></td>
+            <td><a href="Assets/4.jpg"><img src="./Assets/n.jpg" width="200" height="250" alt=""/></a></td>
+            <td><a href="Assets/5.jpg"><img src="./Assets/d.jpg" width="200" height="242" alt=""/></a></td>
           </tr>
           <tr>
-            <td><a href="Assets/6.jpg"><img src="Assets/a.jpg" width="200" height="243" alt=""/></a></td>
-            <td><a href="Assets/7.jpg"><img src="Assets/g.jpg" width="200" height="259" alt=""/></a></td>
-            <td><a href="Assets/9.jpg"><img src="Assets/i.jpg" width="200" height="259" alt=""/></a></td>
-            <td><img src="Assets/b.jpg" width="200" height="276" alt=""/></td>
-            <td><img src="Assets/f.jpg" width="200" height="243" alt=""/></td>
+            <td><a href="Assets/6.jpg"><img src="./Assets/a.jpg" width="200" height="243" alt=""/></a></td>
+            <td><a href="Assets/7.jpg"><img src="./Assets/g.jpg" width="200" height="259" alt=""/></a></td>
+            <td><a href="Assets/9.jpg"><img src="./Assets/i.jpg" width="200" height="259" alt=""/></a></td>
+            <td><img src="./Assets/b.jpg" width="200" height="276" alt=""/></td>
+            <td><img src="./Assets/f.jpg" width="200" height="243" alt=""/></td>
           </tr>
         </tbody>
       </table>
