--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p></p>
    Welcome to my personal art portfolio. My name is Chloe Gunning, I am 22 years old, and I mostly create digital and acrylic abstract paintings. For now, I want this website to be a space where I can share my work proudly as I grow as an artist and expand my portfolio. I will be continously adding and updating this site with new projects over time and eventually, I will start selling pieces from my collection. Please take a look around and enjoy what I have so far.</div>
    <div id="p3">
-      <p><img src="./Assets/t43.jpg" width="1000" height="1004" alt=""></p>
+      <p><img src="./Assets/r.jpg" width="1000" height="1004" alt=""></p>
      </div>
    <div id="footer">
 	  <p>Wednesday, March 8, 2023 2:07 PM</p>
