--- a/Art1.html
+++ b/Art1.html
@@ -22,25 +22,25 @@
      <table width="200" border="1" align="center" cellpadding="1" cellspacing="1">
         <tbody>
           <tr>
-            <td><a href="Assets/c.jpg"><img src="./Assets/c.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/h.jpg"><img src="./Assets/h.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/l.jpg"><img src="./Assets/l.jpg" width="200" height="200" alt=""/></a></td>
-            <td><a href="Assets/m.jpg"><img src="./Assets/m.jpg" width="200" height="200" alt=""/></a></td>
+            <td><a href="Assets/c.jpg"><img src="./Assets/c.jpg" width="200" height="200" alt="Digital art completed 5/7/2021"/></a></td>
+            <td><a href="Assets/h.jpg"><img src="./Assets/h.jpg" width="200" height="200" alt="Digital art completed 7/2/2022"/></a></td>
+            <td><a href="Assets/l.jpg"><img src="./Assets/l.jpg" width="200" height="200" alt="Digital art completed 1/4/2022"/></a></td>
+            <td><a href="Assets/m.jpg"><img src="./Assets/m.jpg" width="200" height="200" alt="Digital art completed 1/4/2022"/></a></td>
             <td><a href="Assets/q.jpg"><img src="./Assets/q.jpg" width="200" height="200" alt=""/></a></td>
           </tr>
           <tr>
-            <td><a href="Assets/j.jpg"><img src="./Assets/j.jpg" width="192" height="297" alt=""/></a></td>
-            <td><a href="Assets/p.jpg"><img src="./Assets/p.jpg" width="200" height="259" alt=""/></a></td>
-            <td><a href="Assets/e.jpg"><img src="./Assets/e.jpg" width="200" height="257" alt=""/></a></td>
-            <td><a href="Assets/n.jpg"><img src="./Assets/n.jpg" width="200" height="250" alt=""/></a></td>
-            <td><a href="Assets/d.jpg"><img src="./Assets/d.jpg" width="200" height="242" alt=""/></a></td>
+            <td><a href="Assets/j.jpg"><img src="./Assets/j.jpg" width="192" height="297" alt="Digital art completed 6/20/2022"/></a></td>
+            <td><a href="Assets/p.jpg"><img src="./Assets/p.jpg" width="200" height="259" alt="Digital art completed 1/4/2022"/></a></td>
+            <td><a href="Assets/e.jpg"><img src="./Assets/e.jpg" width="200" height="257" alt="Digital art completed 2/9/2022"/></a></td>
+            <td><a href="Assets/n.jpg"><img src="./Assets/n.jpg" width="200" height="250" alt="Digital art completed 1/4/2022"/></a></td>
+            <td><a href="Assets/d.jpg"><img src="./Assets/d.jpg" width="200" height="242" alt="Digital art completed 8/29/2018"/></a></td>
           </tr>
           <tr>
-            <td><a href="Assets/a.jpg"><img src="./Assets/a.jpg" width="200" height="243" alt=""/></a></td>
-            <td><a href="Assets/g.jpg"><img src="./Assets/g.jpg" width="200" height="259" alt=""/></a></td>
-            <td><a href="Assets/i.jpg"><img src="./Assets/i.jpg" width="200" height="259" alt=""/></a></td>
-            <td><img src="./Assets/b.jpg" width="200" height="276" alt=""/></td>
-            <td><img src="./Assets/f.jpg" width="200" height="243" alt=""/></td>
+            <td><a href="Assets/a.jpg"><img src="./Assets/a.jpg" width="200" height="243" alt="Digital art completed 6/20/2022"/></a></td>
+            <td><a href="Assets/g.jpg"><img src="./Assets/g.jpg" width="200" height="259" alt="Digital art completed 7/5/2022"/></a></td>
+            <td><a href="Assets/i.jpg"><img src="./Assets/i.jpg" width="200" height="259" alt="Digital art completed 10/13/2021"/></a></td>
+            <td><img src="./Assets/b.jpg" width="200" height="276" alt="Digital art completed 4/9/2022"/></td>
+            <td><img src="./Assets/f.jpg" width="200" height="243" alt="Digital art completed 5/20/2022"/></td>
           </tr>
         </tbody>
       </table>
