--- a/mystyle.html
+++ b/mystyle.html
@@ -20,7 +20,7 @@
 
    <div id="p3">
      <p></p>
-     <p><img src="./Assets/k.jpg" width="480" height="640" alt=""/></p>
+     <p><img src="./Assets/k.jpg" width="480" height="640" alt="This is the Artist"/></p>
      <p>&nbsp;</p>
    </div>
    <div id="footer">
