--- a/Art1.html
+++ b/Art1.html
@@ -15,7 +15,7 @@
      <p><a href="index.html">Home</a> - <a href="abouttheartist.html">About The Artist</a> - Art - <a href="mystyle.html">My Style</a></p>
    </div>
    <div id="p2">
-     <p>Here, I will be presenting my digital and handpainted acrylic art, I hope to grow both of these collections over time.</p>
+     <p>Here, I will be presenting my digital and handpainted acrylic art, I hope to grow both of these collections over time. So far in my collection, there are 5 digital paintings and 10 acrylic paintings. These are the paintings that I have completely finished and fill confident showing in my portfolio. As you can see they're all in the style of abstract. This is my favorite genre to paint becuase I find it really fun and a great way to relax while creating something worthwhile</p>
    </div>
    <div id="p3">
 
