--- a/abouttheartist.html
+++ b/abouttheartist.html
@@ -23,7 +23,7 @@
    </div>
 	
    <div id="p3">
-      <p><a href="mailto:gunningch@outlook.com">Email</a> me for more information.</p>
+      <p><a href="mailto:gunningch@outlook.com">Email</a> me for more information about possible sale dates or price info.</p>
    </div>
 		
 	<form id="survey">
