--- a/mystyle.html
+++ b/mystyle.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,21 +7,34 @@
 <link rel="stylesheet" type="text/css" href="Assets/cgunning1.css" ></head>
 <body>
    <div id="h1">
-      <p><img src="./Assets/re.jpg" width="200" height="50" alt=""/>My Style<img src="./Assets/the.jpg" width="200" height="50" alt=""/></p>
+      <p><img src="Assets/re.jpg" width="200" height="50" alt=""/>My Style<img src="Assets/the.jpg" width="200" height="50" alt=""/></p>
    </div>
 <div id="p1">
   <p></p>
   <span class="intro_paragraph"><a href="index.html">Home</a> - <a href="abouttheartist.html">About The Artist</a> - <a href="Art1.html">Art</a> - My Style</span></div>
 <div id="p2">
   <p></p>
-  <p>I create both acrylic paintings and digital paintings. I am  trying to diversify the genre of art I make as well as the mediums that I use.  My preferred art style is Abstract and my personal favorite styles from other  artists are abstract, surrealism, and classical art.<br>
-  The thing I like about creating abstract art is that there  is freedom to create whatever you want. There is no set structure, you don&rsquo;t  have to stress over being anatomically correct, and aspects of your art don&rsquo;t  have to be perfect. In fact my favorite thing about abstract art is that  mistakes made during the art making process can be incorporated into the work  and not covered up. Sometimes a mistake made while creating an abstract piece  can entirely redirect the plans for the piece and create something different  than originally planned. Some of my favorite pieces that I have done myself  were redirected because of a mistake that I made during the process of making  the piece.</p>
+  <table width="797" border="1" cellspacing="0" cellpadding="3">
+    <tbody>
+      <tr>
+        <td width="429" style="text-align: center">I create both acrylic paintings and digital paintings. I am  trying to diversify the genre of art I make as well as the mediums that I use.  My preferred art style is Abstract and my personal favorite styles from other  artists are abstract, surrealism, and classical art.</td>
+        <td width="350"><img src="Assets/54tone collection.jpg" width="352" height="205" alt="Digital art completed 01-17-22"/></td>
+      </tr>
+      <tr>
+        <td><img src="Assets/k.jpg" width="429" height="560" alt=""/></td>
+        <td style="text-align: center">The thing I like about creating abstract art is that there  is freedom to create whatever you want. There is no set structure, you don&rsquo;t  have to stress over being anatomically correct, and aspects of your art don&rsquo;t  have to be perfect. In fact my favorite thing about abstract art is that  mistakes made during the art making process can be incorporated into the work  and not covered up. Sometimes a mistake made while creating an abstract piece  can entirely redirect the plans for the piece and create something different  than originally planned. Some of my favorite pieces that I have done myself  were redirected because of a mistake that I made during the process of making  the piece.</td>
+      </tr>
+      <tr>
+        <td height="238" style="text-align: center">I hope to grow as an artist in many different ways. I Iove abstract because theres no set guidlines or rules that comes with creating it. You could create so many different type of abstract projects that look nothing alike, no similar patterns, and no similar structure. There are an infinite amount of projects you cna create that look entirely different.</td>
+        <td><img src="Assets/y.jpg" width="351" height="230" alt="Acrylic art created 08-12-22"/></td>
+      </tr>
+    </tbody>
+  </table>
+  <p>&nbsp;</p>
    </div><meta name="keywords" content="art, digital, acrylic, art style, style, classical, abstract, surrealism, redirect, mistake">
 <meta name="description" content="My personal art style is abstract but I do love surrealism and calssical art as well. I love how mistakes in abstract work can redirect the project and turn it into something better.">
 
    <div id="p3">
-     <p></p>
-     <p><img src="./Assets/k.jpg" width="480" height="640" alt="This is the Artist"/></p>
      <p>&nbsp;</p>
    </div>
    <div id="footer">
