--- a/mystyle.html
+++ b/mystyle.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,7 +13,7 @@
   <span class="intro_paragraph"><a href="index.html">Home</a> - <a href="abouttheartist.html">About The Artist</a> - <a href="Art1.html">Art</a> - My Style</span></div>
 <div id="p2">
   <p></p>
-  <table width="797" border="1" cellspacing="0" cellpadding="3">
+  <table width="797" border="1" align="center" cellpadding="3" cellspacing="0">
     <tbody>
       <tr>
         <td width="429" style="text-align: center">I create both acrylic paintings and digital paintings. I am  trying to diversify the genre of art I make as well as the mediums that I use.  My preferred art style is Abstract and my personal favorite styles from other  artists are abstract, surrealism, and classical art.</td>
