--- a/mystyle.html
+++ b/mystyle.html
@@ -24,7 +24,7 @@
         <td style="text-align: center">The thing I like about creating abstract art is that there  is freedom to create whatever you want. There is no set structure, you don&rsquo;t  have to stress over being anatomically correct, and aspects of your art don&rsquo;t  have to be perfect. In fact my favorite thing about abstract art is that  mistakes made during the art making process can be incorporated into the work  and not covered up. Sometimes a mistake made while creating an abstract piece  can entirely redirect the plans for the piece and create something different  than originally planned. Some of my favorite pieces that I have done myself  were redirected because of a mistake that I made during the process of making  the piece.</td>
       </tr>
       <tr>
-        <td height="238" style="text-align: center">I hope to grow as an artist in many different ways. I Iove abstract because theres no set guidlines or rules that comes with creating it. You could create so many different type of abstract projects that look nothing alike, no similar patterns, and no similar structure. There are an infinite amount of projects you cna create that look entirely different.</td>
+        <td height="238" style="text-align: center">I hope to grow as an artist in many different ways. I Iove abstract because theres no set guidlines or rules that comes with creating it. You could create so many different type of abstract projects that look nothing alike, no similar patterns, and no similar structure. There are an infinite amount of projects you can create that look entirely different.</td>
         <td><img src="Assets/y.jpg" width="351" height="230" alt="Acrylic art created 08-12-22"/></td>
       </tr>
     </tbody>
